--- a/Aplicacion web/SimRend/SimRend/Views/DeclaracionGastos/VerDeclaracionGastos.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/DeclaracionGastos/VerDeclaracionGastos.cshtml
@@ -341,6 +341,7 @@
 
         function verOpciones(estado, estadoFinal)
         {
+            console.log(estado);
             var acciones = "";
             if (estadoFinal == "Abierto")
             {
